packages/css/src/components/Grid.css
.f-Grid {
  --colsCount: 12;
  --gutter: var(--f-space--xxl);

  display: flex;
  margin-left: auto;
  margin-right: auto;
}

.f-Grid-col {
  flex: 1;
  margin-right: var(--gutter);
}

.f-Grid-col:last-child {
  margin-right: 0;
}

@media (max-width: 460px) {
  /* --f-breakpoint--s */

  .f-Grid {
    --gutter: var(--f-space--xl);
  }

  .f-Grid-col--s1 {
    flex-basis: calc((100% / var(--colsCount) * 1) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 1) - var(--gutter));
  }

  .f-Grid-col--s2 {
    flex-basis: calc((100% / var(--colsCount) * 2) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 2) - var(--gutter));
  }

  .f-Grid-col--s3 {
    flex-basis: calc((100% / var(--colsCount) * 3) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 3) - var(--gutter));
  }

  .f-Grid-col--s4 {
    flex-basis: calc((100% / var(--colsCount) * 4) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 4) - var(--gutter));
  }

  .f-Grid-col--s5 {
    flex-basis: calc((100% / var(--colsCount) * 5) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 5) - var(--gutter));
  }

  .f-Grid-col--s6 {
    flex-basis: calc((100% / var(--colsCount) * 6) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 6) - var(--gutter));
  }

  .f-Grid-col--s7 {
    flex-basis: calc((100% / var(--colsCount) * 7) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 7) - var(--gutter));
  }

  .f-Grid-col--s8 {
    flex-basis: calc((100% / var(--colsCount) * 8) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 8) - var(--gutter));
  }

  .f-Grid-col--s9 {
    flex-basis: calc((100% / var(--colsCount) * 9) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 9) - var(--gutter));
  }

  .f-Grid-col--s10 {
    flex-basis: calc((100% / var(--colsCount) * 10) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 10) - var(--gutter));
  }

  .f-Grid-col--s11 {
    flex-basis: calc((100% / var(--colsCount) * 11) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 11) - var(--gutter));
  }

  .f-Grid-col--s12 {
    flex-basis: calc((100% / var(--colsCount) * 12) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 12) - var(--gutter));
  }
}

@media (min-width: 460px) and (max-width: 800px) {
  /* --f-breakpoint--s */
  /* --f-breakpoint--m */

  .f-Grid-col--m1 {
    flex-basis: calc((100% / var(--colsCount) * 1) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 1) - var(--gutter));
  }

  .f-Grid-col--m2 {
    flex-basis: calc((100% / var(--colsCount) * 2) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 2) - var(--gutter));
  }

  .f-Grid-col--m3 {
    flex-basis: calc((100% / var(--colsCount) * 3) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 3) - var(--gutter));
  }

  .f-Grid-col--m4 {
    flex-basis: calc((100% / var(--colsCount) * 4) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 4) - var(--gutter));
  }

  .f-Grid-col--m5 {
    flex-basis: calc((100% / var(--colsCount) * 5) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 5) - var(--gutter));
  }

  .f-Grid-col--m6 {
    flex-basis: calc((100% / var(--colsCount) * 6) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 6) - var(--gutter));
  }

  .f-Grid-col--m7 {
    flex-basis: calc((100% / var(--colsCount) * 7) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 7) - var(--gutter));
  }

  .f-Grid-col--m8 {
    flex-basis: calc((100% / var(--colsCount) * 8) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 8) - var(--gutter));
  }

  .f-Grid-col--m9 {
    flex-basis: calc((100% / var(--colsCount) * 9) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 9) - var(--gutter));
  }

  .f-Grid-col--m10 {
    flex-basis: calc((100% / var(--colsCount) * 10) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 10) - var(--gutter));
  }

  .f-Grid-col--m11 {
    flex-basis: calc((100% / var(--colsCount) * 11) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 11) - var(--gutter));
  }

  .f-Grid-col--m12 {
    flex-basis: calc((100% / var(--colsCount) * 12) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 12) - var(--gutter));
  }
}

@media (min-width: 800px) {
  /* --f-breakpoint--m */

  .f-Grid-col--l1 {
    flex-basis: calc((100% / var(--colsCount) * 1) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 1) - var(--gutter));
  }

  .f-Grid-col--l2 {
    flex-basis: calc((100% / var(--colsCount) * 2) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 2) - var(--gutter));
  }

  .f-Grid-col--l3 {
    flex-basis: calc((100% / var(--colsCount) * 3) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 3) - var(--gutter));
  }

  .f-Grid-col--l4 {
    flex-basis: calc((100% / var(--colsCount) * 4) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 4) - var(--gutter));
  }

  .f-Grid-col--l5 {
    flex-basis: calc((100% / var(--colsCount) * 5) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 5) - var(--gutter));
  }

  .f-Grid-col--l6 {
    flex-basis: calc((100% / var(--colsCount) * 6) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 6) - var(--gutter));
  }

  .f-Grid-col--l7 {
    flex-basis: calc((100% / var(--colsCount) * 7) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 7) - var(--gutter));
  }

  .f-Grid-col--l8 {
    flex-basis: calc((100% / var(--colsCount) * 8) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 8) - var(--gutter));
  }

  .f-Grid-col--l9 {
    flex-basis: calc((100% / var(--colsCount) * 9) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 9) - var(--gutter));
  }

  .f-Grid-col--l10 {
    flex-basis: calc((100% / var(--colsCount) * 10) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 10) - var(--gutter));
  }

  .f-Grid-col--l11 {
    flex-basis: calc((100% / var(--colsCount) * 11) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 11) - var(--gutter));
  }

  .f-Grid-col--l12 {
    flex-basis: calc((100% / var(--colsCount) * 12) - var(--gutter));
    max-width: calc((100% / var(--colsCount) * 12) - var(--gutter));
  }
}

